# tarsier

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: Gemfile  README.md  _config.yml
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html
docs/_site/: feed.xml  index.html
tarsier/: __init__.py  searcher.py  utils.py
tests/: test_searcher.py
